New MsgPack and new tests.
* Updated msgPack to support guids as strings.
* Updated the guid capability test.

--- a/ServiceStack.MessagePack.Tests.Unit/ServiceStack.MessagePack.Tests.Unit.csproj
+++ b/ServiceStack.MessagePack.Tests.Unit/ServiceStack.MessagePack.Tests.Unit.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CapabilitiesTests.cs" />
+    <Compile Include="Helpers\HexDump.cs" />
     <Compile Include="MessagePackSerializerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
